# vectorbt_tools

./: .gitignore  pyproject.toml
_vectorbtpro/: __init__.py  _opt_deps.py  _settings.py  _typing.py
_vectorbtpro/base/: wrapping.py
_vectorbtpro/data/: nb.py
_vectorbtpro/generic/: enums.py  sim_range.py
_vectorbtpro/indicators/: nb.py  talib_.py
_vectorbtpro/labels/: nb.py
_vectorbtpro/messaging/: __init__.py  telegram.py
_vectorbtpro/portfolio/: base.py  enums.py  trades.py
_vectorbtpro/px/: accessors.py
_vectorbtpro/records/: base.py  mapped_array.py  nb.py
_vectorbtpro/registries/: ca_registry.py
_vectorbtpro/returns/: nb.py
_vectorbtpro/utils/: __init__.py  array_.py  attr_.py  caching.py  checks.py  chunking.py  config.py  datetime_.py  datetime_nb.py  decorators.py  module_.py  params.py  parsing.py  path_.py  pbar.py  search.py  template.py
data/: sample_backtest.pkl  sample_data.csv  yfinance_mag7.pkl
examples/: backtesting_analysis.ipynb  backtesting_test.py  data_download_yfinance_mag7.py  vectorbt_portfolio_optimization.ipynb  vectorbt_supertrend_multiple_parameters.ipynb
src/vectorbt_tools/: backtesting.py
vectorbt_tools/: __init__.py  backtesting.py
vectorbtpro/base/: accessors.py  indexes.py  indexing.py  merging.py  reshaping.py
vectorbtpro/data/: base.py
vectorbtpro/generic/: accessors.py
vectorbtpro/indicators/: factory.py
vectorbtpro/ohlcv/: accessors.py  nb.py
vectorbtpro/portfolio/: call_seq.py  preparing.py
vectorbtpro/px/: __init__.py
vectorbtpro/returns/: accessors.py
vectorbtpro/signals/: factory.py  (+2 more)
(+78 files in other folders)
